Bug 154169 - macOS Dark mode: black tree menu lines on dark background in LO preferences
Summary: macOS Dark mode: black tree menu lines on dark background in LO preferences
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.5.1.2 release
Hardware: ARM macOS (All)
: low normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.6.0 target:7.5.3
Keywords: notBibisectable, regression
Depends on:
Blocks: macOS-Dark-Mode
  Show dependency treegraph
 
Reported: 2023-03-13 18:10 UTC by Sierk Bornemann
Modified: 2023-03-17 12:36 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
LibreOffice 7.5.1.2 PreferencePane menu tree (925.12 KB, image/png)
2023-03-13 18:12 UTC, Sierk Bornemann
Details
LibreOffice 7.6.0.0.alpha0+ PreferencePane menu tree (867.55 KB, image/png)
2023-03-13 18:14 UTC, Sierk Bornemann
Details
LibreOffice 7.5.2.1 PreferencePane menu tree (876.72 KB, image/png)
2023-03-13 18:15 UTC, Sierk Bornemann
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sierk Bornemann 2023-03-13 18:10:20 UTC
Description:
See screenshots. Tree menu lines in preference menu are unreadable in dark mode.

Steps to Reproduce:
1. Open LibreOffice in dark mode
2. Open LibreOffice Preferences

Actual Results:
Look at lefthand menu structure: black menu structure lines on dark background
(see attached screenshots and red framed area)

Expected Results:
Light/white menu structure lines on dark background, when in dark mode.
Seems to be a regression bug since version 7.5.1.2 (until that version, it was OK, the regressions bug seems to exist since that version).


Reproducible: Always


User Profile Reset: No

Additional Info:
Display light/white menu structure lines on dark background in preferences pane.
Comment 1 Sierk Bornemann 2023-03-13 18:12:19 UTC
Created attachment 185934 [details]
LibreOffice 7.5.1.2 PreferencePane menu tree
Comment 2 Sierk Bornemann 2023-03-13 18:14:29 UTC
Created attachment 185935 [details]
LibreOffice 7.6.0.0.alpha0+ PreferencePane menu tree

Is this a regression bug introduced _after_ 7.5.1.2 (menu tree black rather than white in dark mode)?
Comment 3 Sierk Bornemann 2023-03-13 18:15:32 UTC
Created attachment 185936 [details]
LibreOffice 7.5.2.1 PreferencePane menu tree
Comment 4 Sierk Bornemann 2023-03-13 18:21:06 UTC
(In reply to Sierk Bornemann from comment #0)
> Description:
> Seems to be a regression bug since version 7.5.1.2 (until that version, it
> was OK, the regressions bug seems to exist since that version).

Correction: v7.5.1.2 hass been OK concerning the issue. The regression must have been crept into the daily builds shortly after that release, and is now continued in the current daily builds as well as in the most recent v7.5.2.1.
Comment 5 steve 2023-03-14 09:41:52 UTC
Confirmed in Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5f20f4ff21f597e55d899f5ea4dfe1c1fa5824bc
CPU threads: 8; OS: Mac OS X 13.2.1; UI render: Skia/Raster; VCL: osx
Locale: en-US (en_DE.UTF-8); UI: en-US
Calc: threaded

also confirming 7.5.1.2 is ok
Version: 7.5.1.2 (X86_64) / LibreOffice Community
Build ID: fcbaee479e84c6cd81291587d2ee68cba099e129
CPU threads: 8; OS: Mac OS X 13.2.1; UI render: Skia/Raster; VCL: osx
Locale: de-DE (en_DE.UTF-8); UI: en-US
Calc: threaded

Adding regression, bibisectRequest keywords

Priority low.

@Sierk: do you have capacity to do a bibisect on this to find the commit introducing this issue? (https://wiki.documentfoundation.org/QA/Bibisect/macOS)
Comment 6 Caolán McNamara 2023-03-14 11:08:37 UTC
this is probably a collision of:

commit 5f9cd841a22fa7eb6f29ca8b9a35a8b016fb3d56
Date:   Thu Oct 13 22:03:27 2022 +0200

    tdf#144587 Fix lines in treelists using dark mode
    
    As reported by the user, the lines in a treelist are dark over a dark background. This patch fixes that.
    
    Tested with kf5, gen and gtk3.

and

commit db6fbb0317fcb0a7babca9f71adbbb7c126b9e4e
Date:   Tue Feb 14 08:56:13 2023 +0000

    base section Titles are invisible in dark mode

have different ideas about what way to solve two similar problems
Comment 7 Caolán McNamara 2023-03-14 11:15:25 UTC
yeah, and the kf5 case of bug 144587 is currently not right now either.
Comment 8 Caolán McNamara 2023-03-14 11:31:28 UTC
fix proposed as https://gerrit.libreoffice.org/c/core/+/148848
Comment 9 Commit Notification 2023-03-15 19:50:12 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/edf9d231dd5dc197aeb627bb0712dbc0db37f42e

Resolves: tdf#154169 tree lines not visible in macOS dark mode

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Caolán McNamara 2023-03-15 19:51:00 UTC
backport to 7-5 in gerrit
Comment 11 Commit Notification 2023-03-16 11:15:59 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/280e28c0e53d28c512736c8051c7e56ba0c4f46b

Resolves: tdf#154169 tree lines not visible in macOS dark mode

It will be available in 7.5.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 steve 2023-03-17 12:21:40 UTC
verified, thanks Caolán.

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9f0cf00d29298ed55737928ec4dddc50ac850cd8
CPU threads: 8; OS: Mac OS X 13.2.1; UI render: Skia/Raster; VCL: osx
Locale: en-US (en_DE.UTF-8); UI: en-US
Calc: threaded
Comment 13 Sierk Bornemann 2023-03-17 12:36:51 UTC
Fix verified, too. Thanks, Caolán.

Version: 7.6.0.0.alpha0+ (AARCH64) / LibreOffice Community
Build ID: e12fff12b66561bc46a0e22f58919efa443e7e17
CPU threads: 10; OS: Mac OS X 13.2.1; UI render: Skia/Metal; VCL: osx
Locale: de-DE (de_DE.UTF-8); UI: de-DE
Calc: threaded